--- a/website/docs/button.mdx
+++ b/website/docs/button.mdx
@@ -18,26 +18,26 @@ Buttons communicate the action that will occur when the user touches them.
 
 - MDC Docs: [https://material.io/develop/web/components/buttons/](https://material.io/develop/web/components/buttons/)
 
-```jsx
+```jsx live
 <Button label="Button" />
 ```
 
 ```jsx live
-<>
+<div style={{ display: 'flex', gap: 10 }}>
   <Button label="Icon" icon="favorite" />
   <Button label="Trailing" trailingIcon="keyboard_arrow_right" />
   <Button label="Loading" icon={<CircularProgress />} />
-</>
+</div>
 ```
 
 ```jsx live
-<>
+<div style={{ display: 'flex', gap: 10 }}>
   <Button label="Raised" raised />
   <Button label="Unelevated" unelevated />
   <Button label="Outlined" outlined />
   <Button label="Dense" dense />
   <Button label="No Ripple" ripple={false} />
-</>
+</div>
 ```
 
 ```jsx live
