Improve button doc

--- a/website/docs/button.mdx
+++ b/website/docs/button.mdx
@@ -5,16 +5,14 @@ Buttons communicate the action that will occur when the user touches them.
 - Module **@rmwc/button**
 - Import styles:
 
-  - Using CSS Loader
+  - Or CSS Loader
 
-    - import '@rmwc/button/styles';
-
-      ;
+    - `jsx import '@rmwc/button/styles';`
 
   - Or include stylesheets
-    - **'@material/button/dist/mdc.button.css'**
-    - **'@rmwc/@rmwc/icon/icon.css'**
-    - **'@material/ripple/dist/mdc.ripple.css'**
+    - `'@material/button/dist/mdc.button.css'`
+    - `'@rmwc/@rmwc/icon/icon.css'`
+    - `'@material/ripple/dist/mdc.ripple.css'`
 
 - MDC Docs: [https://material.io/develop/web/components/buttons/](https://material.io/develop/web/components/buttons/)
 
