Improve button doc

--- a/website/docs/buttons.mdx
+++ b/website/docs/buttons.mdx
@@ -21,40 +21,40 @@ Buttons communicate the action that will occur when the user touches them.
 ```
 
 ```jsx live
-<div style={{ display: 'flex', gap: 10 }}>
+<DocWrapper>
   <Button label="Icon" icon="favorite" />
   <Button label="Trailing" trailingIcon="keyboard_arrow_right" />
   <Button label="Loading" icon={<CircularProgress />} />
-</div>
+</DocWrapper>
 ```
 
 ```jsx live
-<div style={{ display: 'flex', gap: 10 }}>
+<DocWrapper>
   <Button label="Raised" raised />
   <Button label="Unelevated" unelevated />
   <Button label="Outlined" outlined />
   <Button label="Dense" dense />
   <Button label="No Ripple" ripple={false} />
-</div>
+</DocWrapper>
 ```
 
 ```jsx live
-<>
+<DocWrapper>
   <Button label="Danger" danger raised />
   <Button label="Danger" danger outlined />
   <Button label="Danger" danger />
-</>
+</DocWrapper>
 ```
 
 ```jsx live
-<>
+<DocWrapper>
   <Button label="With Theme" raised theme={['secondaryBg', 'onSecondary']} />
   {/**
     This example uses "accent" to control the color of the Ripple.
     See the documentation on Ripples.
   */}
   <Button label="With Theme" theme="secondary" />
-</>
+</DocWrapper>
 ```
 
 ```jsx live
