Render avatar mdx

--- a/src/avatar/README.mdx
+++ b/src/avatar/README.mdx
@@ -6,11 +6,12 @@ Avatars are virtual representations of users in a system.
 - Import styles:
   - Using CSS Loader
     - import '@rmwc/avatar/styles';
+
+      ;
   - Or include stylesheets
     - **'@rmwc/avatar/avatar.css'**
     - **'@rmwc/icon/icon.css'**
     - **'@material/ripple/dist/mdc.ripple.css'**
-
 
 ```jsx
 <>
@@ -19,26 +20,14 @@ Avatars are virtual representations of users in a system.
     size="xsmall"
     name="Natalia Alianovna Romanova"
   />
-  <Avatar
-    src="images/avatars/hulk.png"
-    size="small"
-    name="Bruce Banner"
-  />
-  <Avatar
-    src="images/avatars/thor.png"
-    size="medium"
-    name="Thor Odinson"
-  />
+  <Avatar src="images/avatars/hulk.png" size="small" name="Bruce Banner" />
+  <Avatar src="images/avatars/thor.png" size="medium" name="Thor Odinson" />
   <Avatar
     src="images/avatars/captainamerica.png"
     size="large"
     name="Steve Rogers"
   />
-  <Avatar
-    src="images/avatars/ironman.png"
-    size="xlarge"
-    name="Tony Stark"
-  />
+  <Avatar src="images/avatars/ironman.png" size="xlarge" name="Tony Stark" />
 </>
 ```
 
@@ -118,12 +107,7 @@ The avatar component has been designed to work nicely in any of the places you w
 ```jsx
 <Button
   label="Enlist now!"
-  icon={
-    <Avatar
-      src="images/avatars/captainamerica.png"
-      name="Steve Rogers"
-    />
-  }
+  icon={<Avatar src="images/avatars/captainamerica.png" name="Steve Rogers" />}
 />
 ```
 
@@ -149,41 +133,40 @@ The avatar component has been designed to work nicely in any of the places you w
 ```
 
 ## Avatar
+
 An Avatar component for displaying users in a system.
 
 ### Props
 
-| Name | Type | Description |
-|------|------|-------------|
-| `contain` | `undefined \| false \| true` | Contain the avatar image instead of covering. |
-| `interactive` | `undefined \| false \| true` | Make the avatar interactive. |
-| `name` | `undefined \| string` | The name of the user. This will get converted to initials and set the hover title. |
-| `size` | `RMWC.IconSizeT` | The size of the avatar |
-| `square` | `undefined \| false \| true` | Make the avatar square. |
-| `src` | `undefined \| string` | The url for the image. This gets passed to the Icon component. |
-
+| Name          | Type                         | Description                                                                        |
+| ------------- | ---------------------------- | ---------------------------------------------------------------------------------- |
+| `contain`     | `undefined \| false \| true` | Contain the avatar image instead of covering.                                      |
+| `interactive` | `undefined \| false \| true` | Make the avatar interactive.                                                       |
+| `name`        | `undefined \| string`        | The name of the user. This will get converted to initials and set the hover title. |
+| `size`        | `RMWC.IconSizeT`             | The size of the avatar                                                             |
+| `square`      | `undefined \| false \| true` | Make the avatar square.                                                            |
+| `src`         | `undefined \| string`        | The url for the image. This gets passed to the Icon component.                     |
 
 ## AvatarGroup
+
 A container for groups of Avatars
 
 ### Props
 
-| Name | Type | Description |
-|------|------|-------------|
+| Name    | Type                         | Description          |
+| ------- | ---------------------------- | -------------------- |
 | `dense` | `undefined \| false \| true` | Makes the list dense |
 
-
 ## AvatarCount
+
 An Avatar count for displaying list overflow.
 
 ### Props
 
-| Name | Type | Description |
-|------|------|-------------|
-| `interactive` | `undefined \| false \| true` | Make the avatar interactive. |
-| `overflow` | `undefined \| false \| true` | Optionally renders a "+" to indicate overlow. |
-| `size` | `RMWC.IconSizeT` | The size of the avatar |
-| `square` | `undefined \| false \| true` | Make the avatar square. |
-| `value` | `number` | The number of users. |
-
-
+| Name          | Type                         | Description                                   |
+| ------------- | ---------------------------- | --------------------------------------------- |
+| `interactive` | `undefined \| false \| true` | Make the avatar interactive.                  |
+| `overflow`    | `undefined \| false \| true` | Optionally renders a "+" to indicate overlow. |
+| `size`        | `RMWC.IconSizeT`             | The size of the avatar                        |
+| `square`      | `undefined \| false \| true` | Make the avatar square.                       |
+| `value`       | `number`                     | The number of users.                          |
