Enable react live

--- a/src/avatar/README.mdx
+++ b/src/avatar/README.mdx
@@ -4,16 +4,19 @@ Avatars are virtual representations of users in a system.
 
 - Module **@rmwc/avatar**
 - Import styles:
+
   - Using CSS Loader
+
     - import '@rmwc/avatar/styles';
 
       ;
+
   - Or include stylesheets
     - **'@rmwc/avatar/avatar.css'**
     - **'@rmwc/icon/icon.css'**
     - **'@material/ripple/dist/mdc.ripple.css'**
 
-```jsx
+```jsx-live
 <>
   <Avatar
     src="images/avatars/blackwidow.png"
